--- a/infrastructure/homelab/monitoring/alertfy/kustomization.yaml
+++ b/infrastructure/homelab/monitoring/alertfy/kustomization.yaml
@@ -2,7 +2,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - namespace.yaml
-  - kube-prometheus-stack
-  - loki
-  - alertfy
+  - repository.yaml
+  - release.yaml
+  - sealed-secret.yaml
