fix: update flux init path

--- a/.yamllint.yaml
+++ b/.yamllint.yaml
@@ -1,9 +1,11 @@
 extends: default
 ignore:
-  - clusters/homelab/flux-system/
+  - clusters/lab/flux-system/
   - secrets.yaml
 rules:
   line-length:
     ignore: "*"
   comments:
     min-spaces-from-content: 1
+  document-start:
+    present: false
