--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -4,7 +4,7 @@ name: Deploy infrastructure using Terraform & NixOS
 on:
   push:
     branches:
-      - redefine
+      - main
   pull_request:
 
 permissions:
@@ -101,7 +101,7 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - terraform-ci
-    if: github.ref_name == 'redefine'
+    if: github.ref_name == 'main'
     steps:
       - name: Checkout source code
         uses: actions/checkout@v4
