--- a/kubernetes/apps/homelab/minecraft/release.yaml
+++ b/kubernetes/apps/homelab/minecraft/release.yaml
@@ -25,11 +25,11 @@ spec:
       pullPolicy: Always
     resources:
       requests:
-        memory: 2Gi
-        cpu: 250m
-      limits:
         memory: 2.5Gi
-        cpu: 500m
+        cpu: 350m
+      limits:
+        memory: 4Gi
+        cpu: 1.5
     startupProbe:
       enabled: true
       failureThreshold: 60
@@ -57,9 +57,7 @@ spec:
       memory: 2048M
       # A list of Modrinth project slugs with optional version after colon
       modrinth:
-        projects:
-          - fabric-api
-          - floodgate
+        projects: []
         # Specifies whether to download Modrinth dependencies.
         # The allowed values are: none, required, optional
         downloadDependencies: required
