--- a/kubernetes/infrastructure/homelab/monitoring/kube-prometheus-stack/release.yaml
+++ b/kubernetes/infrastructure/homelab/monitoring/kube-prometheus-stack/release.yaml
@@ -33,7 +33,8 @@ spec:
         etcd: false
         windows: false
       # Disabled PrometheusRule alerts
-      disabled: {}
+      disabled:
+        KubeCPUOvercommit: true
     # Provide custom recording or alerting rules to be deployed into the cluster.
     additionalPrometheusRulesMap: {}
     # Configuration for alertmanager
@@ -332,10 +333,10 @@ spec:
         resources:
           requests:
             cpu: 320m
-            memory: 600Mi
+            memory: 1Gi
           limits:
             cpu: 320m
-            memory: 1Gi
+            memory: 2Gi
         # Prometheus StorageSpec for persistent data
         # ref: https://github.com/prometheus-operator/prometheus-operator/blob/main/Documentation/user-guides/storage.md
         storageSpec:
