--- a/kubernetes/clusters/homelab/databases.yaml
+++ b/kubernetes/clusters/homelab/databases.yaml
@@ -2,16 +2,14 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: apps
+  name: databases
   namespace: flux-system
 spec:
   dependsOn:
     - name: infrastructure
       namespace: flux-system
-    - name: databases
-      namespace: flux-system
   interval: 1m
-  path: ./kubernetes/apps/homelab
+  path: ./kubernetes/databases/homelab
   prune: true
   wait: true
   retryInterval: 30s
