fix(cnpg): increase probe's failure threshold

--- a/kubernetes/databases/homelab/cnpg/operator/release.yaml
+++ b/kubernetes/databases/homelab/cnpg/operator/release.yaml
@@ -37,3 +37,7 @@ spec:
         create: true
         namespace: ""
         configMapName: "cnpg-grafana-dashboard"
+    webhook:
+      startupProbe:
+        failureThreshold: 30
+        periodSeconds: 10
