chore(yamlfmt): indentless yaml array

--- a/.yamlfmt.yaml
+++ b/.yamlfmt.yaml
@@ -3,6 +3,7 @@ formatter:
   retain_line_breaks_single: true
   trim_trailing_whitespace: true
   scan_folded_as_literal: true
+  indentless_arrays: true
 exclude:
-  - kubernetes/clusters/homelab/flux-system
-  - secrets.yaml
+- kubernetes/clusters/homelab/flux-system
+- secrets.yaml
