--- a/kubernetes/databases/homelab/cnpg/cluster/kustomization.yaml
+++ b/kubernetes/databases/homelab/cnpg/cluster/kustomization.yaml
@@ -2,5 +2,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+- n8n-user-credential.yaml
 - cluster.yaml
 - podmonitor.yaml
