--- a/kubernetes/apps/homelab/miniflux/kustomization.yaml
+++ b/kubernetes/apps/homelab/miniflux/kustomization.yaml
@@ -8,6 +8,7 @@ images:
 resources:
 - namespace.yaml
 - postgres-credential.yaml
+- miniflux-admin-credential.yaml
 - deployment.yaml
 - service.yaml
 - ingress.yaml
