--- a/kubernetes/apps/homelab/n8n/n8n-postgres-credential.yaml
+++ b/kubernetes/apps/homelab/n8n/n8n-postgres-credential.yaml
@@ -1,3 +1,4 @@
+# yaml-language-server: $schema=https://github.com/datreeio/CRDs-catalog/raw/refs/heads/main/bitnami.com/sealedsecret_v1alpha1.json
 apiVersion: bitnami.com/v1alpha1
 kind: SealedSecret
 metadata:
